set the label to show unstarted stories only for current iteration back as it was

--- a/options.html
+++ b/options.html
@@ -151,8 +151,12 @@ function getLocalStorageValue(key, defaultValue)
     </td>
 </tr>
 <tr class="optionRow">
-    <td colspan="5" class="optionCell"><div class="title">Show only stories for CURRENT ITERATION<br><input type="checkbox" id="showOnlyCurrentIterationUnstartedStories"></div></td>
+    <td colspan="5" class="optionCell"><div class="title">Show only unstarted stories for CURRENT ITERATION</div></td>
 </tr>
+<tr class="optionRow content">
+    <td colspan="5" class="optionCell"><input type="checkbox" id="showOnlyCurrentIterationUnstartedStories"></td>
+</tr>
+
 <tr class="optionRow">
     <td colspan="5" class="optionCell"><div class="title">Refresh Timeout</div></td>
 </tr>
