added report bug and options link in story board page

--- a/storyBoard.html
+++ b/storyBoard.html
@@ -118,6 +118,12 @@ function getStories()
 <body>
 
 
+<div id="reportABug">
+&nbsp<a href="http://codaset.com/vizio/pivotal-tracker-story-board/tickets/new" target="_blank">report a bug</a>&nbsp&nbsp
+<BR>
+&nbsp<a href="options.html" target="_blank">options</a>&nbsp&nbsp
+<BR>
+</div>
 <div id="title">
 Project name
 </div>
