--- a/selectProject.html
+++ b/selectProject.html
@@ -10,22 +10,6 @@
 <script src="scripts/Loader.js"></script>
 <script src="scripts/PivotalTrackerAPIClient.js"></script>
 <title>Pivotal Tracker Story Board Select Project</title>
-<script>
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-10092155-3']);
-     _gaq.push(['_trackPageview']);
-
-     (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = 'https://ssl.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-<script type="text/javascript">
-
-
-
-</script>
 </head>
 <body>
 
@@ -46,48 +30,11 @@
 </table>
 </div>
 <div id="loader">
-    <img id="loader_image" src="images/loader.gif">
+    <img id="loader_image" src="images/loader.gif"/>
 </div>
 <div id="error">
 Error!
 </div>
-<script>
-var errorDialog = new ErrorDialog($('error'));
-
-var loader = new Loader($('loader'), 500);
-
-var token = localStorage["storyBoard-X-Tracker-Token"];
-var pivotalClient = new PivotalTrackerAPIClient(token, false);
-pivotalClient.getProjects(onRequestStart, onProjectsLoaded, onXmlRequestError);
-
-function onRequestStart()
-{
-    loader.showLoader();
-}
-
-function onProjectsLoaded(responseText, responseXML)
-{
-    loader.hideLoader();
-    var projects = responseXML.getElementsByTagName("project");
-    var i = 0;
-    for (var i=0; i < projects.length; i++)
-    {
-        var project = projects[i];
-        var name = getTextContentForElement(project, "name");
-        var velocity = getTextContentForElement(project, "current_velocity");
-        name += " ("+velocity+") ";
-        var useHttps = getTextContentForElement(project, "use_https");
-        if (useHttps == "true")
-            name += " - HTTPS";
-
-        var id = getTextContentForElement(project, "id");
-        var projectDiv = new Element('div');
-        projectDiv.set('html', "<a href='storyBoard.html?projectId="+id+"&useHttps="+useHttps+"' target='PivotalTrackerStoryBoard_"+id+"'>"+name+" </a>");
-        $('projects').grab(projectDiv);
-    }
-}
-
-
-</script>
+<script src="scripts/selectProject.js"></script>
 </body>
 </html>
